--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@hapi/joi": "17.1.1",
     "@nestjs/common": "8.4.7",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "8.4.7",
     "@nestjs/jwt": "9.0.0",
     "@nestjs/mongoose": "9.2.0",
@@ -40,7 +41,7 @@
     "fastify-swagger": "5.2.0",
     "gravatar": "1.8.2",
     "helmet": "5.1.1",
-    "mongoose": "6.5.3",
+    "mongoose": "^6.2.2",
     "nest-access-control": "2.2.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
