--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@nestjs/platform-fastify": "8.4.7",
     "@nestjs/swagger": "5.2.1",
     "@nestjs/typeorm": "9.0.1",
-    "class-transformer": "0.5.1",
-    "class-validator": "0.13.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "crypto": "1.0.1",
     "dotenv": "16.0.1",
     "express-rate-limit": "6.5.2",
