--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "@nestjs/common": "8.4.7",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "8.4.7",
-    "@nestjs/jwt": "9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "9.2.0",
-    "@nestjs/passport": "8.2.2",
+    "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "8.4.7",
     "@nestjs/platform-fastify": "8.4.7",
     "@nestjs/swagger": "5.2.1",
     "@nestjs/typeorm": "9.0.1",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "crypto": "1.0.1",
@@ -43,8 +44,9 @@
     "helmet": "5.1.1",
     "mongoose": "^6.12.5",
     "nest-access-control": "2.2.0",
-    "passport": "0.6.0",
+    "passport": "^0.6.0",
     "passport-jwt": "4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.6",
@@ -55,6 +57,7 @@
   },
   "devDependencies": {
     "@compodoc/compodoc": "1.1.19",
+    "@nestjs/cli": "^10.2.1",
     "@nestjs/testing": "8.4.7",
     "@types/dotenv": "8.2.0",
     "@types/express": "4.17.13",
@@ -63,6 +66,7 @@
     "@types/jest": "28.1.8",
     "@types/mongoose": "5.11.96",
     "@types/node": "16.11.56",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "2.0.12",
     "chai": "4.3.6",
     "jest": "29.0.0",
