--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "mongoose": "^6.12.5",
     "nest-access-control": "2.2.0",
     "passport": "^0.6.0",
-    "passport-jwt": "4.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
